@@ -1,5 +1,6 @@
 - Fixed hang in ASP.NET Web API exporter. #215
 - Fixed ASP.NET Web API exporter exporting metrics from the wrong registry. #217
+- Reduced memory use in MetricPusher implementation. Inspired by #208
 * 3.5.0
 - Exposed metric.Unpublish() method since there was already a matching Publish() there.
 - When the scrape is aborted, stop collecting/serializing metrics. #189
